# mtfind

./: CMakeLists.txt  README.md  build.sh  input.txt
config/: config.txt
src/: CMakeLists.txt  application.cc  application.h  main.cc  parse_worker.cc  parse_worker.h  read_worker.cc  read_worker.h  settings.h  write_worker.cc  write_worker.h
src/common/: config_reader.cc  config_reader.h  logger.cc  logger.h  safe_queue.h
src/daemonizer/: daemon.cc  daemon.h  service.cc  service.h
